Image Sharing - Visibility - fix for long phrases
Change include both forms - create image and edit image

At this moment, in block Image Sharing, buttons in Visibility function displayed without problem only for English language, if start using languages ​​with long phrases - buttons are transferred to another line, which does not look very nice.

Overall, I think we can change the design of this element to a drop-down list, but given that this is an angular form, I think it would be better to do this when back to python.

--- a/openstack_dashboard/static/app/core/images/_images.scss
+++ b/openstack_dashboard/static/app/core/images/_images.scss
@@ -12,3 +12,12 @@ table[ng-controller="horizon.app.core.images.table.ImagesController as table"] {
   max-height: 30em;
 }
 
+/* https://review.opendev.org/c/openstack/horizon/+/948168 */
+/* anfimovir: we need save it after update form to python or change style for */
+/* visibility element to drop-down list, for prevent problems with long phrases */
+
+[ng-controller="horizon.app.core.images.steps.CreateImageController as ctrl"] .btn-group,
+[ng-controller="horizon.app.core.images.steps.EditImageController as ctrl"] .btn-group {
+  display: flex;
+  flex-wrap: nowrap;
+}
